bundled_metadata/force-app/main/default/objects/Okta_Config__mdt/Okta_Config__mdt.object-meta.xml
<CustomObject>
    <label>Okta_Config</label>
    <pluralLabel>Okta_Config</pluralLabel>
</CustomObject>