bundled_metadata/force-app/main/default/objects/Okta_Config__mdt/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <label>Issuer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>