bundled_metadata/force-app/main/default/objects/Okta_Config__mdt/fields/Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Token_Url__c</fullName>
    <label>Token_Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>